--- a/backend/compose.yaml
+++ b/backend/compose.yaml
@@ -1,6 +1,10 @@
 services:
   api:
     build: .
+    environment:
+      - PORT=3000
+      - REDIS_HOST=cache
+      - REDIS_PORT=6379
     ports:
       - "3000:3000"
   cache:
