--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,6 +10,7 @@ COPY . .
 RUN npm run build
 
 FROM nginx:1.25.2-alpine
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=build /tmp/build/dist /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
